fix menu item gap

--- a/clients/discount/assets/src/style/_components/_typeahead-form.scss
+++ b/clients/discount/assets/src/style/_components/_typeahead-form.scss
@@ -20,7 +20,8 @@
 }
 
 .tt-suggestion {
-    @extend .py-1,
+    @extend .py-2,
+    .py-md-1,
     .px-3,
     .px-md-4,
     .text-gray300;
